--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400;1,500;1,600"
       
       />
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
       <title>XIRCLS</title>
     </head>
     <body>
@@ -41,4 +42,6 @@
         -->
       </body>
       <script src="https://kit.fontawesome.com/34c2cb78ac.js" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </html>
